Added test mode dock compose file suport

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
-sudo: false
+# sudo: false
 
-language: node_js
-node_js:
-  - 9
+# language: node_js
+# node_js:
+#   - 9
 
-branches:
-  only:
-    - master
+# branches:
+#   only:
+#     - master
+
