added docker to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,17 @@
 # branches:
 #   only:
 #     - master
+sudo: required
+services:
+  - docker
 
+env:
+  COMPOSE_VERSION: 1.4.1
+
+before_install:
+ - curl -L https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+ - chmod +x docker-compose
+ - sudo mv docker-compose /usr/local/bin
+
+script:
+  - docker-compose -f docker-compose.yml -f docker-compose.test.yml up
