--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ before_install:
  - sudo mv docker-compose /usr/local/bin
 
 script:
-  - docker-compose -f docker-compose.yml -f docker-compose.test.yml up
+  - docker-compose -f docker-compose.yml -f docker-compose.test.yml run api-test
