--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@
 #   only:
 #     - master
 sudo: required
+language: node_js
 services:
   - docker
 
@@ -20,4 +21,4 @@ before_install:
  - sudo mv docker-compose /usr/local/bin
 
 script:
-  - docker-compose -f docker-compose.yml -f docker-compose.test.yml run api-test
+  - docker-compose -f docker-compose.yml -f docker-compose.test.yml up
