--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,4 @@
-# sudo: false
-
-# language: node_js
-# node_js:
-#   - 9
-
-# branches:
-#   only:
-#     - master
 sudo: required
-language: node_js
 services:
   - docker
 
@@ -21,5 +11,22 @@ jobs:
         - curl -L https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
         - chmod +x docker-compose
         - sudo mv docker-compose /usr/local/bin
+      install:
+        - npm install
       script: 
         - docker-compose -f docker-compose.yml -f docker-compose.test.yml up
+    - stage: build
+      name: "Building and tagging an image"
+      script: 
+        - ./scripts/build.sh
+    
+    # - stage: deploy-test
+    #   name: "Deploy to Heroku test environment"
+    #   script: skip
+    #   deploy:
+    #     provider: script
+    #     script: bash scripts/deploy.sh $TEST_CLUSTER_NAME $TEST_SERVICE_NAME
+    #     on: 
+    #       branch: test
+    #       condition: $TRAVIS_BRANCH = test
+      
