--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ jobs:
       install:
         - npm install
       script: 
-        - docker-compose -f docker-compose.yml -f docker-compose.test.yml up
+        - docker-compose -f docker-compose.yml -f docker-compose.test.yml run api-test
     - stage: build
       name: "Building and tagging an image"
       script: 
