--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,34 @@
 sudo: required
+language: node_js
 services:
   - docker
 
 jobs:
   include:
-    # - stage: testing
-    #   env: 
-    #     - COMPOSE_VERSION=1.23.2
-    #   before_install:
-    #     - curl -L https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
-    #     - chmod +x docker-compose
-    #     - sudo mv docker-compose /usr/local/bin
-    #   install:
-    #     - npm install
-    #   script: 
-    #     - docker-compose -f docker-compose.yml -f docker-compose.test.yml run api-test
+    - stage: test
+      env: 
+        - COMPOSE_VERSION=1.23.2
+      before_install:
+        - wget -qO- https://toolbelt.heroku.com/install.sh | sh 
+        # - curl -L https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+        # - chmod +x docker-compose
+        # - sudo mv docker-compose /usr/local/bin
+      install:
+        - npm install
+      script: skip 
+        #- docker-compose -f docker-compose.yml -f docker-compose.test.yml run api-test
     - stage: build
       name: "Building and tagging an image"
       script: 
         - bash ./scripts/build.sh
     
-    # - stage: deploy-test
-    #   name: "Deploy to Heroku test environment"
-    #   script: skip
-    #   deploy:
-    #     provider: script
-    #     script: bash scripts/deploy.sh $TEST_CLUSTER_NAME $TEST_SERVICE_NAME
-    #     on: 
-    #       branch: test
-    #       condition: $TRAVIS_BRANCH = test
+    - stage: deploy-test
+      name: "Deploy to Heroku test environment"
+      script: skip
+      deploy:
+        provider: script
+        script:
+         - bash ./scripts/deploy.sh
+        on: 
+          branch: master
       
