ref heroku api key

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ jobs:
         # - chmod +x docker-compose
         # - sudo mv docker-compose /usr/local/bin
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin 
-        - docker login --username=_ --password=${$HEROKU_API_KEY} registry.heroku.com
+        - docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
       install:
         - npm install
       script: skip 
