--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,7 @@ jobs:
         # - curl -L https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
         # - chmod +x docker-compose
         # - sudo mv docker-compose /usr/local/bin
-        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin 
-        - docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
+        - echo "$HEROKU_PASSWORD" | docker login -u "$HEROKU_USERNAME" --password-stdin registry.heroku.com 
       install:
         - npm install
       script: skip 
